include(UseGTest)
find_package(Boost COMPONENTS date_time REQUIRED)

set(VANETZA_MODULE_TEST geonet)
add_gtest(Address address.cpp)
add_gtest(Areas areas.cpp)
add_gtest(BasicHeader basic_header.cpp)
add_gtest(DataConfirm data_confirm.cpp)
add_gtest(DataRequest data_request.cpp)
add_gtest(Lifetime lifetime.cpp)
add_gtest(SequenceNumber sequence_number.cpp)
add_gtest(Timestamp timestamp.cpp)
link_gtest(Timestamp ${Boost_DATE_TIME_LIBRARY})
add_gtest(TrafficClass traffic_class.cpp)

