include(UseGTest)
prepare_gtest(security set_elements.cpp test_elements.cpp)
target_link_libraries(security_test INTERFACE common)

add_gtest(EccPoint ecc_point.cpp)
add_gtest(PublicKey public_key.cpp)
add_gtest(LengthEncoding length_encoding.cpp)
add_gtest(IntX int_x.cpp)
add_gtest(SubjectInfo subject_info.cpp)
add_gtest(SubjectAttribute subject_attribute.cpp)
add_gtest(Region region.cpp)
add_gtest(ValidityRestriction validity_restriction.cpp)
add_gtest(Signature signature.cpp web_validator.cpp)
add_gtest(SignerInfo signer_info.cpp)
add_gtest(EncryptionParameter encryption_parameter.cpp)
add_gtest(RecipientInfo recipient_info.cpp)
add_gtest(HeaderField header_field.cpp)
add_gtest(TrailerField trailer_field.cpp web_validator.cpp)
add_gtest(Payload payload.cpp)
add_gtest(SecuredMessage secured_message.cpp web_validator.cpp)
